syntax = "proto3";

package proto;

option java_multiple_files = false;
option java_package = "generated";
option java_outer_classname = "InvokeProto";

// The greeting service definition.
service InvokeService {
  // Sends a greeting
  rpc sendInvoke (InvokeRequest) returns (InvokeResponse) {}
}

// The request message containing the user's name.
message InvokeRequest {
  string name = 1;
}

// The response message containing the greetings
message InvokeResponse {
  string message = 1;
}